// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render SearchResultsPage component render SearchResultsPage grid view correctly 1`] = `
<React.Fragment>
  <main
    className="main"
  >
    <Header
      className="secondary"
    >
      <Navigation
        genres={
          Array [
            Object {
              "id": 1,
              "name": "Action",
            },
            Object {
              "id": 2,
              "name": "SciFi",
            },
          ]
        }
      />
      <ToggleButton
        className="toggleGridButton"
        handleGridToggle={[MockFunction]}
        isGrid={true}
      />
    </Header>
    <MovieList
      genres={
        Array [
          Object {
            "id": 1,
            "name": "Action",
          },
          Object {
            "id": 2,
            "name": "SciFi",
          },
        ]
      }
      handleModalToggle={[MockFunction]}
      isGrid={true}
      isModalOpened={false}
      movies={
        Array [
          Object {
            "adult": false,
            "backdropPath": "/test.jpg",
            "genreIds": Array [
              1,
              2,
            ],
            "id": 1,
            "originalLanguage": "en",
            "originalTitle": "test",
            "overview": "test",
            "popularity": 1,
            "posterPath": "/test.jpg",
            "releaseDate": "1",
            "title": "test",
            "video": false,
            "voteAverage": 1,
            "voteCount": 1,
          },
          Object {
            "adult": false,
            "backdropPath": "/test.jpg",
            "genreIds": Array [
              1,
              2,
            ],
            "id": 1,
            "originalLanguage": "en",
            "originalTitle": "test",
            "overview": "test",
            "popularity": 1,
            "posterPath": "/test.jpg",
            "releaseDate": "1",
            "title": "test",
            "video": false,
            "voteAverage": 1,
            "voteCount": 1,
          },
        ]
      }
    />
  </main>
</React.Fragment>
`;

exports[`render SearchResultsPage component render SearchResultsPage table view correctly 1`] = `
<React.Fragment>
  <main
    className="main"
  >
    <Header
      className="secondary"
    >
      <Navigation
        genres={
          Array [
            Object {
              "id": 1,
              "name": "Action",
            },
            Object {
              "id": 2,
              "name": "SciFi",
            },
          ]
        }
      />
      <ToggleButton
        className="toggleGridButton"
        handleGridToggle={[MockFunction]}
        isGrid={false}
      />
    </Header>
    <MovieList
      genres={
        Array [
          Object {
            "id": 1,
            "name": "Action",
          },
          Object {
            "id": 2,
            "name": "SciFi",
          },
        ]
      }
      handleModalToggle={[MockFunction]}
      isGrid={false}
      isModalOpened={false}
      movies={
        Array [
          Object {
            "adult": false,
            "backdropPath": "/test.jpg",
            "genreIds": Array [
              1,
              2,
            ],
            "id": 1,
            "originalLanguage": "en",
            "originalTitle": "test",
            "overview": "test",
            "popularity": 1,
            "posterPath": "/test.jpg",
            "releaseDate": "1",
            "title": "test",
            "video": false,
            "voteAverage": 1,
            "voteCount": 1,
          },
          Object {
            "adult": false,
            "backdropPath": "/test.jpg",
            "genreIds": Array [
              1,
              2,
            ],
            "id": 1,
            "originalLanguage": "en",
            "originalTitle": "test",
            "overview": "test",
            "popularity": 1,
            "posterPath": "/test.jpg",
            "releaseDate": "1",
            "title": "test",
            "video": false,
            "voteAverage": 1,
            "voteCount": 1,
          },
        ]
      }
    />
  </main>
</React.Fragment>
`;

exports[`render SearchResultsPage component render loading status correctly 1`] = `
<React.Fragment>
  <main
    className="main"
  >
    <Header
      className="secondary"
    >
      <Navigation
        genres={
          Array [
            Object {
              "id": 1,
              "name": "Action",
            },
            Object {
              "id": 2,
              "name": "SciFi",
            },
          ]
        }
      />
      <ToggleButton
        className="toggleGridButton"
        handleGridToggle={[MockFunction]}
        isGrid={true}
      />
    </Header>
    <MovieList
      genres={
        Array [
          Object {
            "id": 1,
            "name": "Action",
          },
          Object {
            "id": 2,
            "name": "SciFi",
          },
        ]
      }
      handleModalToggle={[MockFunction]}
      isGrid={true}
      isModalOpened={false}
      movies={
        Array [
          Object {
            "adult": false,
            "backdropPath": "/test.jpg",
            "genreIds": Array [
              1,
              2,
            ],
            "id": 1,
            "originalLanguage": "en",
            "originalTitle": "test",
            "overview": "test",
            "popularity": 1,
            "posterPath": "/test.jpg",
            "releaseDate": "1",
            "title": "test",
            "video": false,
            "voteAverage": 1,
            "voteCount": 1,
          },
          Object {
            "adult": false,
            "backdropPath": "/test.jpg",
            "genreIds": Array [
              1,
              2,
            ],
            "id": 1,
            "originalLanguage": "en",
            "originalTitle": "test",
            "overview": "test",
            "popularity": 1,
            "posterPath": "/test.jpg",
            "releaseDate": "1",
            "title": "test",
            "video": false,
            "voteAverage": 1,
            "voteCount": 1,
          },
        ]
      }
    />
  </main>
  <Preloader />
</React.Fragment>
`;

exports[`render SearchResultsPage component render no-movies status correctly 1`] = `
<React.Fragment>
  <main
    className="main"
  >
    <Header
      className="secondary"
    >
      <Navigation
        genres={
          Array [
            Object {
              "id": 1,
              "name": "Action",
            },
            Object {
              "id": 2,
              "name": "SciFi",
            },
          ]
        }
      />
      <ToggleButton
        className="toggleGridButton"
        handleGridToggle={[MockFunction]}
        isGrid={true}
      />
    </Header>
    <NoDataToShow />
  </main>
  <Preloader />
</React.Fragment>
`;
